--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <title>Jack.trgu.ru</title>
     <meta name="description" content="Jack.trgu.ru – контроллер для модификаций и переводов от Translate Guardians.">
-    <meta name="application-name" content="jack.trgu.ru">
+    <meta name="application-name" content="jack.trgu.ru 1">
 
     <meta name="og:url" content="https://jack.trgu.ru/">
-    <meta name="og:title" content="jack.trgu.ru">
+    <meta name="og:title" content="jack.trgu.ru 1">
     <meta name="og:type" content="website">
     <meta name="og:description" content="Jack.trgu.ru – контроллер для модификаций и переводов от Translate Guardians.">
     <meta name="og:image" content="./src/images/favicon-196x196.png">
